<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="user_name_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="postal_code_hint">Postal code</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="register_shoe_form_title">Register Shoe</string>
    <string name="shoe_name_field">Name</string>
    <string name="shoe_size_field">Size</string>
    <string name="shoe_price_field">Price</string>
    <string name="shoes_list_title">Shoes list</string>
    <string name="add_shoe_button">Add Shoe</string>
    <string name="add_update_shoe">Add / update</string>
    <string name="shoes_order_instruction">Select item do add to Order</string>
    <string name="order_quantity_label">Quantity</string>
    <string name="order_item_title">Item</string>
    <string name="checkout_button">Checkout</string>
    <string name="order_quantity_hint">number...</string>
    <string name="order_menu">Make Order</string>
    <string name="my_orders_menu">My Orders</string>
    <string name="status_label">Status</string>
    <string name="my_orders_title">My Orders</string>
    <string name="manage_shoes_title">Manage Shoes</string>
    <string name="register_shoe_title">Register Shoe</string>
    <string name="register_user_title">Register User</string>
    <string name="make_order_title">Make Order</string>
    <string name="my_cart_title">My Cart</string>
    <string name="my_orders_empty_list_message">You have no Orders</string>
    <string name="error_empty_field">Field must not be empty</string>
    <string name="error_login_invalid">Login Invalid!</string>
    <string name="error_category_invalid">Category is a mandatory field!</string>
    <string name="user_registered_successfully">User registered successfully!</string>
</resources>
